--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "loginwebsite",
   "version": "1.0.0",
   "description": "Login functionality for a website",
-  "main": "./src/main.js",
+  "main": "./src/server/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "eslint ./src/*.js && node ./src/main.js",
