--- a/package.json
+++ b/package.json
@@ -34,9 +34,22 @@
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "pg": "^8.7.3",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "winston": "^3.7.2"
   },
   "devDependencies": {
-    "eslint": "^8.14.0"
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.14.0",
+    "eslint-plugin-react": "^7.29.4",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   }
 }
