--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
   },
   "homepage": "https://github.com/NaNraptor/loginwebsite#readme",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-session": "^1.17.2",
     "pg": "^8.7.3",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
     "winston": "^3.7.2"
   },
