--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "homepage": "https://github.com/NaNraptor/loginwebsite#readme",
   "dependencies": {
+    "@babel/runtime": "^7.17.9",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
@@ -43,6 +44,7 @@
   "devDependencies": {
     "@babel/cli": "^7.17.6",
     "@babel/core": "^7.17.9",
+    "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.5",
