--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "https://github.com/NaNraptor/loginwebsite#readme",
   "dependencies": {
     "@babel/runtime": "^7.17.9",
+    "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
