added the babel eslint parser for more correct jsx linting

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
         "node": true,
         "browser": true
     },
+    "parser": "@babel/eslint-parser",
     "extends": [
         "eslint:recommended",
         "plugin:react/recommended"
