--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-rate-limit": "^6.4.0",
     "express-session": "^1.17.2",
     "pg": "^8.7.3",
+    "postcodesio-client": "^0.3.4",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.0",
     "react-dom": "^18.0.0",
